[package]
name = "memory-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
warp = "0.3.4"
